@@ -1,29 +1,29 @@
 /*-------------------------------------------------------------------------
   Register Declarations for Motorola MC68HC908GP32
-  
+
   Copyright (c) 2004, Juan Gonzalez <juan@iearobotics.com>
 
   Based on mc68hc908qy.h,
    Written By - Erik Petrich
     epetrich@users.sourceforge.net (2003)
-    
+
    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2, or (at your option) any
    later version.
-   
+
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-   
+
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
    Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-   
+
    In other words, you are welcome to use, share and improve this program.
    You are forbidden to forbid anyone else to use, share and improve
-   what you give them.   Help stamp out software-hoarding!  
+   what you give them.   Help stamp out software-hoarding!
 -------------------------------------------------------------------------*/
 
 #ifndef _MC68HC908GP32_H
@@ -53,7 +53,7 @@ struct __hc08_bits
   unsigned int bit6:1;
   unsigned int bit7:1;
 };
-  
+
 
 _VOLDATA _UINT8 __at 0x00 PTA;     /* Port A Data Register */
 #define PORTA PTA		 /* Alias for PTA        */
@@ -63,10 +63,11 @@ _VOLDATA _UINT8 __at 0x00 PTA;     /* Port A Data Register */
   #define PTA3 ((struct __hc08_bits *)(&PTA))->bit3
   #define PTA4 ((struct __hc08_bits *)(&PTA))->bit4
   #define PTA5 ((struct __hc08_bits *)(&PTA))->bit5
-  #define AWUL ((struct __hc08_bits *)(&PTA))->bit6
-  
+  #define PTA6 ((struct __hc08_bits *)(&PTA))->bit6
+  #define PTA7 ((struct __hc08_bits *)(&PTA))->bit7
+
 _VOLDATA _UINT8 __at 0x01 PTB;     /* Port B Data Register */
-#define PORTB PTB              /* Alias for PTB        */	
+#define PORTB PTB              /* Alias for PTB        */
   #define PTB0 ((struct __hc08_bits *)(&PTB))->bit0
   #define PTB1 ((struct __hc08_bits *)(&PTB))->bit1
   #define PTB2 ((struct __hc08_bits *)(&PTB))->bit2
@@ -158,47 +159,47 @@ _VOLDATA _UINT8 __at 0x0C DDRE;    /* Data Direction Register E */
   #define DDRE5 ((struct __hc08_bits *)(&DDRE))->bit5
   #define DDRE6 ((struct __hc08_bits *)(&DDRE))->bit6
   #define DDRE7 ((struct __hc08_bits *)(&DDRE))->bit7
-		
+
 _VOLDATA _UINT8 __at 0x0D PTAPUE;  /* Port A pull-up enables */
 	#define PTAPUE0 ((struct __hc08_bits *)(&PTAPUE))->bit0
-	#define PTAPUE1 ((struct __hc08_bits *)(&PTAPUE))->bit1	
+	#define PTAPUE1 ((struct __hc08_bits *)(&PTAPUE))->bit1
 	#define PTAPUE2 ((struct __hc08_bits *)(&PTAPUE))->bit2
-	#define PTAPUE3 ((struct __hc08_bits *)(&PTAPUE))->bit3	
+	#define PTAPUE3 ((struct __hc08_bits *)(&PTAPUE))->bit3
   #define PTAPUE4 ((struct __hc08_bits *)(&PTAPUE))->bit4
-	#define PTAPUE5 ((struct __hc08_bits *)(&PTAPUE))->bit5	
+	#define PTAPUE5 ((struct __hc08_bits *)(&PTAPUE))->bit5
 	#define PTAPUE6 ((struct __hc08_bits *)(&PTAPUE))->bit6
-	#define PTAPUE7 ((struct __hc08_bits *)(&PTAPUE))->bit7		
-		
+	#define PTAPUE7 ((struct __hc08_bits *)(&PTAPUE))->bit7
+
 _VOLDATA _UINT8 __at 0x0E PTCPUE;	 /* Port C pull-up enables */
 	#define PTCPUE0 ((struct __hc08_bits *)(&PTCPUE))->bit0
-	#define PTCPUE1 ((struct __hc08_bits *)(&PTCPUE))->bit1	
+	#define PTCPUE1 ((struct __hc08_bits *)(&PTCPUE))->bit1
 	#define PTCPUE2 ((struct __hc08_bits *)(&PTCPUE))->bit2
-	#define PTCPUE3 ((struct __hc08_bits *)(&PTCPUE))->bit3		
+	#define PTCPUE3 ((struct __hc08_bits *)(&PTCPUE))->bit3
 	#define PTCPUE4 ((struct __hc08_bits *)(&PTCPUE))->bit4
-	#define PTCPUE5 ((struct __hc08_bits *)(&PTCPUE))->bit5	
+	#define PTCPUE5 ((struct __hc08_bits *)(&PTCPUE))->bit5
 	#define PTCPUE6 ((struct __hc08_bits *)(&PTCPUE))->bit6
 	/* PTCPUE7 does not exit! */
-	
+
 _VOLDATA _UINT8 __at 0x0F PTDPUE;  /* port D pull-up enables */
 	#define PTDPUE0 ((struct __hc08_bits *)(&PTDPUE))->bit0
-	#define PTDPUE1 ((struct __hc08_bits *)(&PTDPUE))->bit1	
+	#define PTDPUE1 ((struct __hc08_bits *)(&PTDPUE))->bit1
   #define PTDPUE2 ((struct __hc08_bits *)(&PTDPUE))->bit2
 	#define PTDPUE3 ((struct __hc08_bits *)(&PTDPUE))->bit3
 	#define PTDPUE4 ((struct __hc08_bits *)(&PTDPUE))->bit4
-	#define PTDPUE5 ((struct __hc08_bits *)(&PTDPUE))->bit5	
+	#define PTDPUE5 ((struct __hc08_bits *)(&PTDPUE))->bit5
   #define PTDPUE6 ((struct __hc08_bits *)(&PTDPUE))->bit6
 	#define PTDPUE7 ((struct __hc08_bits *)(&PTDPUE))->bit7
-		
+
 _VOLDATA _UINT8 __at 0x10 SPCR;   /* SPI Control Register */
 	#define SPRIE  ((struct __hc08_bits *)(&SPCR))->bit7
 	#define DMAS   ((struct __hc08_bits *)(&SPCR))->bit6
-	#define SPMSTR ((struct __hc08_bits *)(&SPCR))->bit5	
+	#define SPMSTR ((struct __hc08_bits *)(&SPCR))->bit5
 	#define CPOL   ((struct __hc08_bits *)(&SPCR))->bit4
-	#define CPHA   ((struct __hc08_bits *)(&SPCR))->bit3	
+	#define CPHA   ((struct __hc08_bits *)(&SPCR))->bit3
   #define SPWOM  ((struct __hc08_bits *)(&SPCR))->bit2
-	#define SPE    ((struct __hc08_bits *)(&SPCR))->bit1	
-  #define SPTIE  ((struct __hc08_bits *)(&SPCR))->bit0	
-	
+	#define SPE    ((struct __hc08_bits *)(&SPCR))->bit1
+  #define SPTIE  ((struct __hc08_bits *)(&SPCR))->bit0
+
 _VOLDATA _UINT8 __at 0x11 SPSCR;  /* SPI Status and Control Register */
 	#define SPRF   ((struct __hc08_bits *)(&SPSCR))->bit7
 	#define ERRIE  ((struct __hc08_bits *)(&SPSCR))->bit6
@@ -207,22 +208,22 @@ _VOLDATA _UINT8 __at 0x11 SPSCR;  /* SPI Status and Control Register */
 	#define SPTE   ((struct __hc08_bits *)(&SPSCR))->bit3
 	#define MODFEN ((struct __hc08_bits *)(&SPSCR))->bit2
 	#define SPR1   ((struct __hc08_bits *)(&SPSCR))->bit1
-	#define SPR0   ((struct __hc08_bits *)(&SPSCR))->bit0	
-		
+	#define SPR0   ((struct __hc08_bits *)(&SPSCR))->bit0
+
 _VOLDATA _UINT8 __at 0x12 SPDR;   /* SPI Data Register */
 
-_VOLDATA _UINT8 __at 0x13 SCC1;  /* SCI Control Register 1 */ 
+_VOLDATA _UINT8 __at 0x13 SCC1;  /* SCI Control Register 1 */
 	#define LOOPS  ((struct __hc08_bits *)(&SCC1))->bit7
-  #define ENSCI  ((struct __hc08_bits *)(&SCC1))->bit6	
+  #define ENSCI  ((struct __hc08_bits *)(&SCC1))->bit6
 	#define TXINV  ((struct __hc08_bits *)(&SCC1))->bit5
-  #define M      ((struct __hc08_bits *)(&SCC1))->bit4		
+  #define M      ((struct __hc08_bits *)(&SCC1))->bit4
 	#define WAKE   ((struct __hc08_bits *)(&SCC1))->bit3
   #define ILTY   ((struct __hc08_bits *)(&SCC1))->bit2
 	#define PEN    ((struct __hc08_bits *)(&SCC1))->bit1
   #define PTY    ((struct __hc08_bits *)(&SCC1))->bit0
-	
-		
-_VOLDATA _UINT8 __at 0x14 SCC2;  /* SCI Control Register 2 */ 
+
+
+_VOLDATA _UINT8 __at 0x14 SCC2;  /* SCI Control Register 2 */
 	#define SCTIE  ((struct __hc08_bits *)(&SCC2))->bit7
 	#define TCIE   ((struct __hc08_bits *)(&SCC2))->bit6
 	#define SCRIE  ((struct __hc08_bits *)(&SCC2))->bit5
@@ -231,8 +232,8 @@ _VOLDATA _UINT8 __at 0x14 SCC2;  /* SCI Control Register 2 */
 	#define RE     ((struct __hc08_bits *)(&SCC2))->bit2
 	#define WRU    ((struct __hc08_bits *)(&SCC2))->bit1
 	#define SBK    ((struct __hc08_bits *)(&SCC2))->bit0
-	
-_VOLDATA _UINT8 __at 0x15 SCC3;  /* SCI Control Register 3 */ 
+
+_VOLDATA _UINT8 __at 0x15 SCC3;  /* SCI Control Register 3 */
 	#define SCC3_R8 ((struct __hc08_bits *)(&SCC3))->bit7
 	#define SCC3_TB ((struct __hc08_bits *)(&SCC3))->bit6
   #define DMARE   ((struct __hc08_bits *)(&SCC3))->bit5
@@ -241,7 +242,7 @@ _VOLDATA _UINT8 __at 0x15 SCC3;  /* SCI Control Register 3 */
 	#define NEIE    ((struct __hc08_bits *)(&SCC3))->bit2
   #define FEIE    ((struct __hc08_bits *)(&SCC3))->bit1
 	#define PEIE    ((struct __hc08_bits *)(&SCC3))->bit0
-	
+
 _VOLDATA _UINT8 __at 0x16 SCS1;  /* SCI Status Register 1 */
 	#define SCTE  ((struct __hc08_bits *)(&SCS1))->bit7
 	#define TC    ((struct __hc08_bits *)(&SCS1))->bit6
@@ -250,15 +251,15 @@ _VOLDATA _UINT8 __at 0x16 SCS1;  /* SCI Status Register 1 */
 	#define OR    ((struct __hc08_bits *)(&SCS1))->bit3
 	#define NF    ((struct __hc08_bits *)(&SCS1))->bit2
 	#define FE    ((struct __hc08_bits *)(&SCS1))->bit1
-	#define PE    ((struct __hc08_bits *)(&SCS1))->bit0	
-		
+	#define PE    ((struct __hc08_bits *)(&SCS1))->bit0
+
 _VOLDATA _UINT8 __at 0x17 SCS2;  /* SCI Status Register 2 */
 	#define RPF  ((struct __hc08_bits *)(&SCS2))->bit0
 	#define BKF  ((struct __hc08_bits *)(&SCS2))->bit1
   /*  Bits 2-7 not implemented	*/
-	
+
 _VOLDATA _UINT8 __at 0x18 SCDR;  /* SCI Data Register */
-	
+
 _VOLDATA _UINT8 __at 0x19 SCBR;  /* SCI Baud Rate Register */
 	#define SCP1  ((struct __hc08_bits *)(&SCBR))->bit5
 	#define SCP0  ((struct __hc08_bits *)(&SCBR))->bit4
@@ -267,16 +268,16 @@ _VOLDATA _UINT8 __at 0x19 SCBR;  /* SCI Baud Rate Register */
   #define SCR1  ((struct __hc08_bits *)(&SCBR))->bit1
   #define SCR0  ((struct __hc08_bits *)(&SCBR))->bit0
 	/*-- Bits 6 and 7 do not exist */
-		
+
 _VOLDATA _UINT8 __at 0x1a INTKBSCR; /* Keyboard Status and Control Register */
 	#define KEYF   ((struct __hc08_bits *)(&INTKBSCR))->bit3
 	#define ACKK   ((struct __hc08_bits *)(&INTKBSCR))->bit2
 	#define IMASKK ((struct __hc08_bits *)(&INTKBSCR))->bit1
 	#define MODEK  ((struct __hc08_bits *)(&INTKBSCR))->bit0
 	/*-- Bits 4-7 do not exist  */
-		
+
 _VOLDATA _UINT8 __at 0x1b INTKBIER; /* Keyboard Interrupt Enable Register */
-  #define KBIE7  ((struct __hc08_bits *)(&INTKBIER))->bit7	
+  #define KBIE7  ((struct __hc08_bits *)(&INTKBIER))->bit7
 	#define KBIE6  ((struct __hc08_bits *)(&INTKBIER))->bit6
 	#define KBIE5  ((struct __hc08_bits *)(&INTKBIER))->bit5
 	#define KBIE4  ((struct __hc08_bits *)(&INTKBIER))->bit4
@@ -284,7 +285,7 @@ _VOLDATA _UINT8 __at 0x1b INTKBIER; /* Keyboard Interrupt Enable Register */
 	#define KBIE2  ((struct __hc08_bits *)(&INTKBIER))->bit2
 	#define KBIE1  ((struct __hc08_bits *)(&INTKBIER))->bit1
 	#define KBIE0  ((struct __hc08_bits *)(&INTKBIER))->bit0
-		
+
 _VOLDATA _UINT8 __at 0x1C TBCR;    /* Time Base Module Control */
 	#define TBIF   ((struct __hc08_bits *)(&TBCR))->bit7
 	#define TBR2   ((struct __hc08_bits *)(&TBCR))->bit6
@@ -293,21 +294,21 @@ _VOLDATA _UINT8 __at 0x1C TBCR;    /* Time Base Module Control */
 	#define TACK   ((struct __hc08_bits *)(&TBCR))->bit3
 	#define TBIE   ((struct __hc08_bits *)(&TBCR))->bit2
 	#define TBON   ((struct __hc08_bits *)(&TBCR))->bit1
-	/* Bit 0 Reserved */	
-		
+	/* Bit 0 Reserved */
+
 _VOLDATA _UINT8 __at 0x1D INTSCR;	/* IRQ status/control       */
 	#define IRQF1  ((struct __hc08_bits *)(&INTSCR))->bit3
 	#define ACK1   ((struct __hc08_bits *)(&INTSCR))->bit2
 	#define IMASK1 ((struct __hc08_bits *)(&INTSCR))->bit1
 	#define MODE1  ((struct __hc08_bits *)(&INTSCR))->bit0
 	/* Bits 4-7 unimplemented */
-	
+
 _VOLDATA _UINT8 __at 0x1e CONFIG2; /* Configuration Register 2 */
-/* CONFIG2 is one-time writeble, so can't use bitfields  */	
-	
+/* CONFIG2 is one-time writeble, so can't use bitfields  */
+
 _VOLDATA _UINT8 __at 0x1f CONFIG1; /* Configuration Register 1 */
-/* CONFIG1 is one-time writeable, so can't use bitfields */	
-	
+/* CONFIG1 is one-time writeable, so can't use bitfields */
+
 _VOLDATA _UINT8 __at 0x20 T1SC;     /* TIM 1 Status and Control */
   #define PS0   ((struct __hc08_bits *)(&T1SC))->bit0
   #define PS1   ((struct __hc08_bits *)(&T1SC))->bit1
@@ -315,7 +316,7 @@ _VOLDATA _UINT8 __at 0x20 T1SC;     /* TIM 1 Status and Control */
   #define TRST  ((struct __hc08_bits *)(&T1SC))->bit4
   #define TSTOP ((struct __hc08_bits *)(&T1SC))->bit5
   #define TOIE  ((struct __hc08_bits *)(&T1SC))->bit6
-  #define TOF   ((struct __hc08_bits *)(&T1SC))->bit7	
+  #define TOF   ((struct __hc08_bits *)(&T1SC))->bit7
 
 _VOLDATA _UINT16 __at 0x21 T1CNT;    /* TIM1 Counter High & Low Registers */
 _VOLDATA _UINT8  __at 0x21  T1CNTH;  /* TIM1 Counter Register High */
@@ -334,7 +335,7 @@ _VOLDATA _UINT8 __at 0x25 T1SC0;    /* TIM1 Channel 0 Status and Control Registe
   #define MS0B   ((struct __hc08_bits *)(&T1SC0))->bit5
   #define CH0IE  ((struct __hc08_bits *)(&T1SC0))->bit6
   #define CH0F   ((struct __hc08_bits *)(&T1SC0))->bit7
-		
+
 _VOLDATA _UINT16 __at 0x26 T1CH0;   /* TIM1 Channel 0 High & Low Registers */
 _VOLDATA _UINT8 __at 0x26 T1CH0H;   /* TIM1 Channel 0 Register High */
 _VOLDATA _UINT8 __at 0x27 T1CH0L;   /* TIM1 Channel 0 Register Low */
@@ -351,11 +352,11 @@ _VOLDATA _UINT8 __at 0x28 T1SC1;    /* TIM1 Channel 1 Status and Control Registe
 _VOLDATA _UINT16 __at 0x29 T1CH1;    /* TIM1 Channel 1 High & Low Registers */
 _VOLDATA _UINT8  __at 0x29  T1CH1H;  /* TIM1 Channel 1 Register High */
 _VOLDATA _UINT8  __at 0x2A  T1CH1L;  /* TIM1 Channel 1 Register Low */
-	
+
 /*------------------*/
 /* TIM 2 REGISTERS  */
 /*------------------*/
-	
+
 _VOLDATA _UINT8 __at 0x2B T2SC;     /* TIM 2 Status and Control */
   #define PS0_2   ((struct __hc08_bits *)(&T2SC))->bit0
   #define PS1_2   ((struct __hc08_bits *)(&T2SC))->bit1
@@ -363,16 +364,16 @@ _VOLDATA _UINT8 __at 0x2B T2SC;     /* TIM 2 Status and Control */
   #define TRST_2  ((struct __hc08_bits *)(&T2SC))->bit4
   #define TSTOP_2 ((struct __hc08_bits *)(&T2SC))->bit5
   #define TOIE_2  ((struct __hc08_bits *)(&T2SC))->bit6
-  #define TOF_2   ((struct __hc08_bits *)(&T2SC))->bit7	
-		
+  #define TOF_2   ((struct __hc08_bits *)(&T2SC))->bit7
+
 _VOLDATA _UINT16 __at 0x2C T2CNT;   /* TIM2 Counter High & Low Registers */
 _VOLDATA _UINT8  __at 0x2C T2CNTH;  /* TIM2 Counter Register High */
 _VOLDATA _UINT8  __at 0x2D T2CNTL;  /* TIM2 Counter Register Low */
-	
+
 _VOLDATA _UINT16 __at 0x2E T2MOD;    /* TIM2 Counter Modulo High & Low Registers */
 _VOLDATA _UINT8  __at 0x2E T2MODH;   /* TIM2 Counter Modulo Register High */
-_VOLDATA _UINT8  __at 0x2F T2MODL;   /* TIM2 Counter Modulo Register Low */	
-	
+_VOLDATA _UINT8  __at 0x2F T2MODL;   /* TIM2 Counter Modulo Register Low */
+
 _VOLDATA _UINT8 __at 0x30 T2SC0;    /* TIM2 Channel 0 Status and Control Register */
   #define CH0MAX_2 ((struct __hc08_bits *)(&T2SC0))->bit0
   #define TOV0_2   ((struct __hc08_bits *)(&T2SC0))->bit1
@@ -381,12 +382,12 @@ _VOLDATA _UINT8 __at 0x30 T2SC0;    /* TIM2 Channel 0 Status and Control Registe
   #define MS0A_2   ((struct __hc08_bits *)(&T2SC0))->bit4
   #define MS0B_2   ((struct __hc08_bits *)(&T2SC0))->bit5
   #define CH0IE_2  ((struct __hc08_bits *)(&T2SC0))->bit6
-  #define CH0F_2   ((struct __hc08_bits *)(&T2SC0))->bit7	
-	
+  #define CH0F_2   ((struct __hc08_bits *)(&T2SC0))->bit7
+
 _VOLDATA _UINT16 __at 0x31 T2CH0;    /* TIM2 Channel 0 High & Low Registers */
 _VOLDATA _UINT8  __at 0x31 T2CH0H;   /* TIM2 Channel 0 Register High */
-_VOLDATA _UINT8  __at 0x32 T2CH0L;   /* TIM2 Channel 0 Register Low */	
-	
+_VOLDATA _UINT8  __at 0x32 T2CH0L;   /* TIM2 Channel 0 Register Low */
+
 _VOLDATA _UINT8 __at 0x33 T2SC1;    /* TIM2 Channel 1 Status and Control Register */
   #define CH1MAX_2 ((struct __hc08_bits *)(&T2SC1))->bit0
   #define TOV1_2   ((struct __hc08_bits *)(&T2SC1))->bit1
@@ -398,8 +399,8 @@ _VOLDATA _UINT8 __at 0x33 T2SC1;    /* TIM2 Channel 1 Status and Control Registe
 
 _VOLDATA _UINT16 __at 0x34  T2CH1;   /* TIM2 Channel 1 High & Low Registers */
 _VOLDATA _UINT8  __at 0x34  T2CH1H;  /* TIM2 Channel 1 Register High */
-_VOLDATA _UINT8  __at 0x35  T2CH1L;  /* TIM2 Channel 1 Register Low */	
-	
+_VOLDATA _UINT8  __at 0x35  T2CH1L;  /* TIM2 Channel 1 Register Low */
+
 _VOLDATA _UINT8 __at 0x36 PCTL;  /* PLL Control Register */
 	#define PLLIE ((struct __hc08_bits *)(&PCTL))->bit7
 	#define PLLF  ((struct __hc08_bits *)(&PCTL))->bit6
@@ -409,21 +410,21 @@ _VOLDATA _UINT8 __at 0x36 PCTL;  /* PLL Control Register */
 	#define PRE0  ((struct __hc08_bits *)(&PCTL))->bit2
 	#define VPR1  ((struct __hc08_bits *)(&PCTL))->bit1
 	#define VPR0  ((struct __hc08_bits *)(&PCTL))->bit0
-		
+
 _VOLDATA	_UINT8 __at 0x37 PBWC;  /* PLL Bandwidth Control Register */
 	#define AUTO ((struct __hc08_bits *)(&PBWC))->bit7
 	#define LOCK ((struct __hc08_bits *)(&PBWC))->bit6
 	#define ACQ  ((struct __hc08_bits *)(&PBWC))->bit5
 	/* Bits 1-4, Unimplemented */
 	/* Bit 0, Reserved         */
-	
+
 _VOLDATA _UINT8 __at 0x38 PMSH;  /* PLL Multiplier Select High */
 	#define MUL11 ((struct __hc08_bits *)(&PMSH))->bit3
 	#define MUL10 ((struct __hc08_bits *)(&PMSH))->bit2
 	#define MUL9  ((struct __hc08_bits *)(&PMSH))->bit1
 	#define MUL8  ((struct __hc08_bits *)(&PMSH))->bit0
 	/* Bits 4-7 unimplemented */
-	
+
 _VOLDATA _UINT8 __at 0x39 PMSL;  /* PLL Multiplir Select Low */
 	#define MUL7 ((struct __hc08_bits *)(&PMSL))->bit7
 	#define MUL6 ((struct __hc08_bits *)(&PMSL))->bit6
@@ -433,7 +434,7 @@ _VOLDATA _UINT8 __at 0x39 PMSL;  /* PLL Multiplir Select Low */
 	#define MUL2 ((struct __hc08_bits *)(&PMSL))->bit2
 	#define MUL1 ((struct __hc08_bits *)(&PMSL))->bit1
 	#define MUL0 ((struct __hc08_bits *)(&PMSL))->bit0
-	
+
 _VOLDATA _UINT8 __at 0x3a PMRS;  /* PLL VCO Select Range  */
 	#define VRS7 ((struct __hc08_bits *)(&PMRS))->bit7
 	#define VRS6 ((struct __hc08_bits *)(&PMRS))->bit6
@@ -443,8 +444,8 @@ _VOLDATA _UINT8 __at 0x3a PMRS;  /* PLL VCO Select Range  */
 	#define VRS2 ((struct __hc08_bits *)(&PMRS))->bit2
 	#define VRS1 ((struct __hc08_bits *)(&PMRS))->bit1
 	#define VRS0 ((struct __hc08_bits *)(&PMRS))->bit0
-		
-_VOLDATA _UINT8 __at 0x3b PMDS;  /* PLL Reference Divider Select Register */	
+
+_VOLDATA _UINT8 __at 0x3b PMDS;  /* PLL Reference Divider Select Register */
 	#define RDS3 ((struct __hc08_bits *)(&PMDS))->bit3
 	#define RDS2 ((struct __hc08_bits *)(&PMDS))->bit2
 	#define RDS1 ((struct __hc08_bits *)(&PMDS))->bit1
@@ -460,9 +461,9 @@ _VOLDATA _UINT8 __at 0x3c ADSCR; /* Analog-to-Digital Status and Control Reg. */
 	#define ADCH2 ((struct __hc08_bits *)(&ADSCR))->bit2
 	#define ADCH1 ((struct __hc08_bits *)(&ADSCR))->bit1
 	#define ADCH0 ((struct __hc08_bits *)(&ADSCR))->bit0
-	
+
 _VOLDATA _UINT8 __at 0x3d ADR;   /* Analog-to-Digital Data Register  */
-	
+
 _VOLDATA _UINT8 __at 0x3e ADCLK; /* Analog-to-Digital Clock */
 	#define ADIV2  ((struct __hc08_bits *)(&ADCLK))->bit7
 	#define ADIV1  ((struct __hc08_bits *)(&ADCLK))->bit6
@@ -484,7 +485,7 @@ _VOLXDATA _UINT8 __at 0xfe01 SRSR;    /* SIM Reset Status Register */
   /* Bit 0 unimplemented */
 
 _VOLXDATA _UINT8 __at 0xfe02 SUBAR;  /* SIM Upper Byte Address */
-	
+
 _VOLXDATA _UINT8 __at 0xfe03 SBFCR;    /* SIM Break Flag Control Register */
   #define BFCE ((struct __hc08_bits *)(&BFCR))->bit7
 
@@ -496,41 +497,41 @@ _VOLXDATA _UINT8 __at 0xfe04 INT1;    /* Interrupt Status Register 1 */
   #define IF5 ((struct __hc08_bits *)(&INT1))->bit6
   #define IF6 ((struct __hc08_bits *)(&INT1))->bit7
 	/* Bits 0-1 Reserved */
-	
+
 _VOLXDATA _UINT8 __at 0xfe05 INT2;  /* Interrupt Status Register 2 */
   #define IF14 ((struct __hc08_bits *)(&INT2))->bit7
-	#define IF13 ((struct __hc08_bits *)(&INT2))->bit6	
+	#define IF13 ((struct __hc08_bits *)(&INT2))->bit6
 	#define IF12 ((struct __hc08_bits *)(&INT2))->bit5
-	#define IF11 ((struct __hc08_bits *)(&INT2))->bit4	
+	#define IF11 ((struct __hc08_bits *)(&INT2))->bit4
 	#define IF10 ((struct __hc08_bits *)(&INT2))->bit3
 	#define IF9 ((struct __hc08_bits *)(&INT2))->bit2
 	#define IF8 ((struct __hc08_bits *)(&INT2))->bit1
-	#define IF7 ((struct __hc08_bits *)(&INT2))->bit0	
-		
+	#define IF7 ((struct __hc08_bits *)(&INT2))->bit0
+
 _VOLXDATA _UINT8 __at 0xfe06 INT3;  /* Interrupt Status Register 3 */
-  #define IF16 ((struct __hc08_bits *)(&INT3))->bit1	
-	#define IF15 ((struct __hc08_bits *)(&INT3))->bit0	
-		
-_VOLXDATA _UINT8 __at 0xfe07 FLCTR;  /* Flash test/programming */	
-	
+  #define IF16 ((struct __hc08_bits *)(&INT3))->bit1
+	#define IF15 ((struct __hc08_bits *)(&INT3))->bit0
+
+_VOLXDATA _UINT8 __at 0xfe07 FLCTR;  /* Flash test/programming */
+
 _VOLXDATA _UINT8 __at 0xfe08 FLCR;    /* FLASH Control Register */
   #define PGM   ((struct __hc08_bits *)(&FLCR))->bit0
   #define ERASE ((struct __hc08_bits *)(&FLCR))->bit1
   #define MASS  ((struct __hc08_bits *)(&FLCR))->bit2
   #define HVEN  ((struct __hc08_bits *)(&FLCR))->bit3
-		
+
 _VOLXDATA _UINT16 __at 0xfe09 BRK;    /* Break Address High & Low Registers */
 _VOLXDATA _UINT8 __at 0xfe09 BRKH;    /* Break Address High Register */
-_VOLXDATA _UINT8 __at 0xfe0a BRKL;    /* Break Address Low Register */	
-	
+_VOLXDATA _UINT8 __at 0xfe0a BRKL;    /* Break Address Low Register */
+
 _VOLXDATA _UINT8 __at 0xfe0b BRKSCR;  /* Break Status and Control Register */
   #define BRKA ((struct __hc08_bits *)(&BRKSCR))->bit6
-  #define BRKE ((struct __hc08_bits *)(&BRKSCR))->bit7	
+  #define BRKE ((struct __hc08_bits *)(&BRKSCR))->bit7
 
 _VOLXDATA _UINT8 __at 0xfe0c LVISR;   /* Low voltage detect */
 	#define LVIOUT ((struct __hc08_bits *)(&LVISR))->bit7
-	
-	
+
+
 _VOLXDATA _UINT8 __at 0xfe7e FLBPR;    /* FLASH Block Protect Register */
   #define BPR0 ((struct __hc08_bits *)(&FLBPR))->bit0
   #define BPR1 ((struct __hc08_bits *)(&FLBPR))->bit1
